--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "pretest": "npm run build",
     "test": "tape test/**/*-test.js | faucet && eslint src test index.js",
-    "build": "rimraf build && mkdirp build && rollup -c -o build/d3.compose.js -- index.js & gulp css",
+    "build": "rimraf build && mkdirp build && rollup -c & gulp css",
     "uglify": "cd build && uglifyjs d3.compose.js --source-map d3.compose.min.js.map --comments -c -m -o d3.compose.min.js",
     "docs": "rimraf _docs && yuidoc && gulp docs",
     "preversion": "npm test",
@@ -42,7 +42,7 @@
     "eslint": "^5.16.0",
     "faucet": "0.0.1",
     "github": "^0.2.4",
-    "gulp": "^3.9.0",
+    "gulp": "^4.0.2",
     "gulp-bump": "^1.0.0",
     "gulp-copy": "0.0.2",
     "gulp-header": "^1.7.1",
@@ -55,8 +55,7 @@
     "jsdom": "^8.0.0",
     "node-mkdirp": "0.0.1",
     "rimraf": "^2.4.4",
-    "rollup": "^0.25.4",
-    "run-sequence": "^1.1.2",
+    "rollup": "^1.15.6",
     "sinon": "^1.17.3",
     "tape": "^4.4.0",
     "uglify-js": "^2.6.1",
