--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "faucet": "0.0.1",
     "github": "^0.2.4",
     "gulp": "^4.0.2",
-    "gulp-bump": "^1.0.0",
-    "gulp-copy": "0.0.2",
-    "gulp-header": "^1.7.1",
+    "gulp-bump": "^3.1.3",
+    "gulp-copy": "^4.0.1",
+    "gulp-header": "^2.0.7",
     "gulp-load-plugins": "^1.6.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.6",
-    "gulp-zip": "^3.0.2",
-    "inquirer": "^0.12.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-util": "^3.0.8",
+    "gulp-zip": "^5.0.0",
+    "inquirer": "^6.4.0",
     "jquery": "^3.4.1",
     "jsdom": "^8.0.0",
     "node-mkdirp": "0.0.1",
