--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "jquery": "^3.4.1",
     "jsdom": "^8.0.0",
     "lodash": ">=4.17.13",
-    "lodash.template": ">=4.5.0",
+    "lodash.template": "^4.5.0",
     "mime": "^1.4.1",
     "node-mkdirp": "0.0.1",
     "rimraf": "^2.4.4",
